# rabbitmq-example

./: README.md  pyproject.toml
rabbitmq_example/: receive.py  send.py
