[tool.poetry]
name = "rabbitmq-example"
version = "0.1.0"
description = ""
authors = ["Joel Paim <joellpaim@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
pyfiglet = "^1.0.3"
rich = "^14.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
